<resources>
    <string name="app_name">Android Test</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="top_up">Top Up</string>
    <string name="tab_pulsa">Pulsa</string>
    <string name="tab_data_package">Data Package</string>

    <string name="mobile_number">Mobile Number</string>
    <string name="nominal">Nominal :</string>

    <string name="otp_notice">OTP is not needed for first transaction of the day that is less than Rp 200.000</string>
    <string name="loan_confirmation">Loan Confirmation</string>
    <string name="payment_details">Payment Details</string>
    <string name="admin_fee">Admin fee</string>
    <string name="pay_in_30_days">Pay in 30 days</string>
    <string name="kredivo_pin">Kredivo PIN</string>
    <string name="pin">PIN</string>
    <string name="payment_terms">By continuing, I agree with loan agreement of Kredivo</string>
    <string name="payment_terms_highlighted">loan agreement of Kredivo</string>
    <string name="pay">Pay</string>

    <string name="status">Status</string>
    <string name="success">Success</string>
    <string name="order_details">Order Details</string>
    <string name="order_id">Order ID</string>
    <string name="invoice_notice">Invoice has been emailed to you\nHave problem? Email us at support@kredivo.com</string>
    <string name="invoice_notice_highlighted">support@kredivo.com</string>

    <string name="promo">Promo</string>
    <string name="merchant_promo">Merchant Promo</string>
    <string name="valid_date">Valid Date</string>
    <string name="voucher_code">Voucher Code</string>
    <string name="copy">Copy</string>
    <string name="voucher_code_copied">Voucher code copied</string>
    <string name="terms_condition">Terms &amp; Conditions</string>

    <string name="interpunct">\u2022</string>
    <string name="hardcoded_promo_name">Discount 20% at Kedai Hape Original, Mall Kota Kasablanka</string>
    <string name="hardcoded_promo_valid_date">1 – 31 Maret 2019</string>
    <string name="hardcoded_promo_code">BIRTHDAY9</string>
    <string-array name="hardcoded_promo_terms">
        <item>Promo berlaku untuk transaksi yang dilakukan diaplikasi terbaru Bukalapak.</item>
        <item>Gunakan kode BIRTHDAY9 untuk dapatkan cashback sebesar 3%.</item>
        <item>Promo hanya berlaku untuk transaksi yang menggunakan metode pengiriman J&amp;T Express dan Ninja Xpress (REG dan FAST).</item>
        <item>Setiap pengguna bisa menggunakan promo 2 (dua) kali selama periode Promo.</item>
        <item>Voucher bisa digunakan untuk berbelanja produk kategori apa saja, yang ada di Bukalapak kecuali kategori tiket dan voucher, produk virtual (pulsa, paket data, voucher game, token &amp; tagihan listrik, tiket pesawat, tiket kereta, pembayaran zakat online) dan produk keuangan (BukaEmas dan BukaReksa).</item>
    </string-array>

</resources>
