<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/promoImage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/header_background"
                    app:layout_constraintDimensionRatio="H, 16:8" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/base_margin">

                <TextView
                    android:id="@+id/promoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/valid_date"
                    android:textColor="@color/light_text_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/promoValidDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/voucher_code"
                    android:textColor="@color/light_text_color"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/voucher_code_background"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/voucherCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/copyVoucherCode"
                        android:gravity="center"
                        android:lines="1"
                        android:paddingLeft="@dimen/base_margin"
                        android:paddingRight="@dimen/base_margin"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/copyVoucherCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/voucher_code_copy_button"
                        android:paddingLeft="@dimen/base_margin"
                        android:paddingTop="12dp"
                        android:paddingRight="@dimen/base_margin"
                        android:paddingBottom="12dp"
                        android:text="@string/copy"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/base_margin"
                    android:text="@string/terms_condition"
                    android:textColor="@color/light_text_color"
                    android:textSize="12sp" />

                <TableLayout
                    android:id="@+id/promoTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="1" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>