<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pay"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/base_margin">

                <ImageView
                    android:id="@+id/pulsaOperatorLogo"
                    android:layout_width="48dp"
                    android:layout_height="48dp" />

                <TextView
                    android:id="@+id/pulsaPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_margin"
                    android:textColor="@color/dark_text_color"
                    android:textSize="18sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:layout_marginRight="@dimen/base_margin"
                app:cardBackgroundColor="@color/pale_yellow"
                app:cardCornerRadius="@dimen/card_radius">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/base_margin"
                    android:text="@string/otp_notice"
                    android:textColor="@color/dark_text_color" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:layout_marginRight="@dimen/base_margin"
                app:cardCornerRadius="@dimen/card_radius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/paymentDetailsHeader"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@color/header_background"
                        android:paddingLeft="@dimen/base_margin"
                        android:paddingTop="12dp"
                        android:paddingRight="@dimen/base_margin"
                        android:paddingBottom="12dp"
                        android:text="@string/payment_details"
                        android:textSize="18sp" />

                    <View
                        style="@style/horizontal_line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/paymentDetailsHeader" />

                    <TextView
                        android:id="@+id/productName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="@dimen/base_margin"
                        android:text="Pulsa 50.000"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/barrier"
                        app:layout_constraintTop_toBottomOf="@id/paymentDetailsHeader" />

                    <TextView
                        android:id="@+id/adminFeeHint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="@dimen/base_margin"
                        android:text="@string/admin_fee"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/barrier"
                        app:layout_constraintTop_toBottomOf="@id/productName" />

                    <View
                        android:id="@+id/paymentDetailsDivider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/dotted_line"
                        app:layout_constraintTop_toBottomOf="@id/adminFee" />

                    <TextView
                        android:id="@+id/totalHint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="@dimen/base_margin"
                        android:layout_marginBottom="12dp"
                        android:text="@string/pay_in_30_days"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/barrier"
                        app:layout_constraintTop_toBottomOf="@id/paymentDetailsDivider" />

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/barrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="left"
                        app:constraint_referenced_ids="productAmount, adminFee, totalAmount" />

                    <TextView
                        android:id="@+id/productAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginRight="@dimen/base_margin"
                        android:text="Pulsa 50.000"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/productName" />

                    <TextView
                        android:id="@+id/adminFee"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginRight="@dimen/base_margin"
                        android:text="@string/admin_fee"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/adminFeeHint" />

                    <TextView
                        android:id="@+id/totalAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginRight="@dimen/base_margin"
                        android:text="Pulsa 50.000"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/totalHint" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_margin"
                app:cardCornerRadius="@dimen/card_radius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/pinHeader"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@color/header_background"
                        android:paddingLeft="@dimen/base_margin"
                        android:paddingTop="12dp"
                        android:paddingRight="@dimen/base_margin"
                        android:paddingBottom="12dp"
                        android:text="@string/kredivo_pin"
                        android:textSize="18sp" />

                    <View
                        style="@style/horizontal_line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/pinHeader" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pinInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginTop="@dimen/base_margin"
                        android:layout_marginRight="@dimen/base_margin"
                        app:layout_constraintTop_toBottomOf="@id/pinHeader"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/pinInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pin"
                            android:inputType="numberPassword"
                            android:maxLength="6" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="@dimen/base_margin"
                        android:layout_marginBottom="@dimen/base_margin"
                        android:gravity="center"
                        android:text="@string/payment_terms"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/pinInputLayout" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/pay"
        style="@style/Button.Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/pay" />
</RelativeLayout>