<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/confirm"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:layout_marginRight="@dimen/base_margin"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/paymentStatusHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/header_background"
                        android:paddingLeft="@dimen/base_margin"
                        android:paddingTop="12dp"
                        android:paddingRight="@dimen/base_margin"
                        android:paddingBottom="12dp"
                        android:text="@string/order_details"
                        android:textSize="16sp" />

                    <View
                        style="@style/horizontal_line"
                        app:layout_constraintTop_toBottomOf="@id/paymentStatusHeader" />

                    <ImageView
                        android:id="@+id/pulsaOperatorLogo"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_marginTop="@dimen/base_margin"
                        android:adjustViewBounds="true"
                        android:background="@drawable/circle_background"
                        android:padding="8dp"
                        android:scaleType="center"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/paymentStatusHeader"
                        app:srcCompat="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/pulsaPhoneNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@id/pulsaOperatorLogo"
                        app:layout_constraintLeft_toRightOf="@id/pulsaOperatorLogo"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/pulsaOperatorLogo" />

                    <View
                        android:id="@+id/paymentStatusDivider"
                        style="@style/horizontal_line"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_marginTop="@dimen/base_margin"
                        android:layout_marginEnd="@dimen/base_margin"
                        app:layout_constraintTop_toBottomOf="@id/pulsaOperatorLogo" />

                    <TextView
                        android:id="@+id/paymentStatusHint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_marginTop="@dimen/base_margin"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:text="@string/status"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/paymentStatusBarrier"
                        app:layout_constraintTop_toBottomOf="@id/paymentStatusDivider" />

                    <TextView
                        android:id="@+id/orderIdHint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:layout_marginBottom="@dimen/base_margin"
                        android:text="@string/order_id"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/paymentStatusBarrier"
                        app:layout_constraintTop_toBottomOf="@id/paymentStatusHint" />

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/paymentStatusBarrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="left"
                        app:constraint_referenced_ids="paymentStatus, orderId" />

                    <TextView
                        android:id="@+id/paymentStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:text="@string/success"
                        android:textColor="@color/lime_green"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/paymentStatusHint" />

                    <TextView
                        android:id="@+id/orderId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:text="KB-8027de03"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/orderIdHint" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:layout_marginRight="@dimen/base_margin"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="1dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/paymentDetailsHeader"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@color/header_background"
                        android:paddingLeft="@dimen/base_margin"
                        android:paddingTop="12dp"
                        android:paddingRight="@dimen/base_margin"
                        android:paddingBottom="12dp"
                        android:text="@string/payment_details"
                        android:textSize="16sp" />

                    <View
                        style="@style/horizontal_line"
                        app:layout_constraintTop_toBottomOf="@id/paymentDetailsHeader" />

                    <TextView
                        android:id="@+id/productName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginTop="@dimen/base_margin"
                        android:layout_marginRight="@dimen/base_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/barrier"
                        app:layout_constraintTop_toBottomOf="@id/paymentDetailsHeader" />

                    <TextView
                        android:id="@+id/adminFeeHint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="@dimen/base_margin"
                        android:text="@string/admin_fee"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/barrier"
                        app:layout_constraintTop_toBottomOf="@id/productName" />

                    <ImageView
                        android:id="@+id/paymentDetailsDivider"
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginTop="@dimen/base_margin"
                        android:layerType="software"
                        android:src="@drawable/dotted_line"
                        app:layout_constraintTop_toBottomOf="@id/adminFee" />

                    <TextView
                        android:id="@+id/totalHint"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/base_margin"
                        android:text="@string/pay_in_30_days"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/barrier"
                        app:layout_constraintTop_toBottomOf="@id/paymentDetailsDivider" />

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/barrier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="left"
                        app:constraint_referenced_ids="productAmount, adminFee, totalAmount" />

                    <TextView
                        android:id="@+id/productAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginRight="@dimen/base_margin"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/productName" />

                    <TextView
                        android:id="@+id/adminFee"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginRight="@dimen/base_margin"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/adminFeeHint" />

                    <TextView
                        android:id="@+id/totalAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/base_margin"
                        android:layout_marginRight="@dimen/base_margin"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/totalHint" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/base_margin"
                app:cardBackgroundColor="@color/header_background"
                app:cardCornerRadius="@dimen/card_radius"
                app:cardElevation="1dp">

                <TextView
                    android:id="@+id/invoiceNotice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/base_margin"
                    android:text="@string/invoice_notice"
                    android:textSize="12sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/confirm"
        style="@style/Button.Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/ok" />
</RelativeLayout>